[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xtracer"
dynamic = ["version"]
description = "Converting PAMAF .mbi data to pseudo-MS/MS files by untargeted methods."
readme = "README.md"
requires-python = "==3.12.11"
license = {text = "MIT"}
authors = [
  {name = "Jian Song", email = "jian.song.2025@outlook.com"}
]
dependencies = [
  "numpy==1.26.4",
  "numba==0.61.2",
]

[tool.setuptools.dynamic]
version = {attr = "xtracer.__version__"}

[project.scripts]
xtracer = "xtracer.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xtracer*"]
